--- a/Rick&Morty/index.html
+++ b/Rick&Morty/index.html
@@ -10,10 +10,53 @@
             margin: 0;
             padding: 0;
         }
+        body{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 2vh;
+            padding: 1em;
+            width: 100vw;
+            height: auto;
+            overflow-x: hidden;
+            background-image: url("../imagens/5b0efe30ea027041f94d678a3d7eb136.jpg");
+            background-attachment: fixed;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     </style>
 </head>
-<body>
-    <img src="" alt="Logo" width="500px" height="auto">
+
     
+}
+</body>
+</html>
+<body>
+<html>
+
+    
+    <img src="../imagens/Rick_and_Morty.svg.png" alt="Logo" width="500px" height="auto">
+    <div>
+        <label for="pageInput">Digite uma página de (1/42)</label>
+        <input type="text" id="pageInput">
+        <button onclick="fetchCharacters()">Mostrar Persoangens</button>
+    </div>
+
+    <div id="container"></div>
+    <script>
+        async function fetchCharacters(){
+            const page = document.getElementById("pageInput").value || 1;
+            const apiUrl = `https://rickandmortyapi.com/api/character/?page=${page}`
+
+            try {
+                const response = await fetch(apiUrl);
+                const data = await response.json()
+                console.log(data.results)
+            }   catch (error){
+                console.error("Erro ao buscar personagens - ", error)
+            }
+        }
+    </script>
 </body>
 </html>
